Finalização de estrutura html e estilização do header e footer da landing page e demais páginas, atualização de conteúdo de demais páginas.

--- a/index.html
+++ b/index.html
@@ -4,46 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuida Tempo - Preparando você para eventos climáticos</title>
+    <title>Manual do Tempo - Preparando você para eventos climáticos</title>
 
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
 <body>
     <header>
-        <a href="./index.html">
-            <img class="logo" src="./assets/images" alt="Imagem de logo">
-        </a>
-        <nav>
-            <ul>
-                <li>
-                    <a href="./pages/">
-                        <p>Link</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./pages/">
-                        <p>Link</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./pages/">
-                        <p>Link</p>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+        <div class="limite-container">
+            <a href="./index.html">
+                <img class="logo" src="./assets/images/logo.png" alt="logo da manual do tempo">
+            </a>
+            <nav class="navegador-entradas">
+                <ul>
+                    <!-- Caminhos provisórios -->
+                    <li><a class="botao-cadastro" href="./pages/home.html">Criar conta</a></li>
+                    <li><a class="botao-login" href="./pages/home.html">Entrar</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
         <section class="hero">
             <div class="hero-banner">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="./assets/images/" alt="">
+                <img src="./assets/images/" alt="">
+                <img src="./assets/images/" alt="">
             </div>
-            <div class="hero-title">
-                <h1>Título</h1>
+            <div class="hero-titulo">
+                <h1>Landing Page</h1>
                 <p>Breve descrição ou algo do tipo</p>
             </div>
         </section>
@@ -51,23 +41,20 @@
             resto do conteúdo
         </section>
     </main>
+
     <footer>
-        <section>
-            <a href="./index.html">
-                <img class="logo" src="./assets/images" alt="logo image">
-            </a>
-            <p>© 2025 Cuida Tempo. Todos os direitos reservados</p>
-        </section>
-        <nav>
-            <ul>
-                <li>
-                    <a href="./pages/">Termos de Uso</a>
-                </li>
-                <li>
-                    <a href="./pages/">Políticas de Privacidade</a>
-                </li>
-            </ul>
-        </nav>
+        <div class="limite-container">
+            <section>
+                <a href="./index.html"><img class="logo" src="./assets/images/variante-logo.png" alt="logo da manual do tempo"></a>
+                <p>© 2025 Manual do Tempo. Todos os direitos reservados</p>
+            </section>
+            <nav>
+                <ul>
+                    <li><a href="#">Termos de Uso</a></li>
+                    <li><a href="#">Políticas de Privacidade</a></li>
+                </ul>
+            </nav>
+        </div>
     </footer>
 </body>
 
