--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manual do Tempo - Contato</title>
+    <title>Manual do Tempo - Início</title>
 
     <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
@@ -27,30 +27,16 @@
         </div>
     </header>
 
-    <main id="contato">
-        <section class="title">
-            <h1>Contato</h1>
+    <main>
+        <section class="titulo">
+            <h1>Página Inicial</h1>
             <p>Breve descrição ou algo do tipo</p>
         </section>
         <section>
-            <form class="contato-form">
-                <fieldset>
-                    <div>
-                        <label for=""></label>
-                        <input type="text" name="" id="">
-                    </div>
-                    <div>
-                        <label for=""></label>
-                        <input type="text" name="" id="">
-                    </div>
-                    <div>
-                        <label for=""></label>
-                        <input type="text" name="" id="">
-                    </div>
-                </fieldset>
-            </form>
+            resto do conteúdo
         </section>
     </main>
+
     <footer>
         <div class="limite-container">
            <section>
