--- a/pages/quemsomos.html
+++ b/pages/quemsomos.html
@@ -4,35 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuida Tempo - Quem Somos</title>
+    <title>Manual do Tempo - Quem Somos</title>
 
     <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 
 <body>
     <header>
-        <a href="../index.html">
-            <img class="logo" src="../assets/images" alt="Imagem de logo">
-        </a>
-        <nav>
-            <ul>
-                <li>
-                    <a href="./">
-                        <p>Link</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./">
-                        <p>Link</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./">
-                        <p>Link</p>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+        <div class="limite-container">
+            <a href="./home.html"><img class="logo" src="../assets/images/logo.png" alt="logo da manual do tempo"></a>
+            <img class="fechar-navegador" src="../assets/images/icone-barras.png" alt="ícone de fechar">
+            <nav class="navegador-paginas">
+                <ul>
+                    <li><a href="./home.html">Início</a></li>
+                    <li><a href="./modelo.html">Extra1</a></li>
+                    <li><a href="../index.html">Extra2</a></li>
+                    <li><a href="./quemsomos.html">Quem Somos</a></li>
+                    <li><a href="./faq.html">Dúvidas</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
@@ -44,24 +36,20 @@
             resto do conteúdo
         </section>
     </main>
-    
+
     <footer>
-        <section>
-            <a href="../index.html">
-                <img class="logo" src="../assets/images" alt="logo image">
-            </a>
-            <p>© 2025 Cuida Tempo. Todos os direitos reservados</p>
-        </section>
-        <nav>
-            <ul>
-                <li>
-                    <a href="./">Termos de Uso</a>
-                </li>
-                <li>
-                    <a href="./">Políticas de Privacidade</a>
-                </li>
-            </ul>
-        </nav>
+        <div class="limite-container">
+           <section>
+                <a href="./home.html"><img class="logo" src="../assets/images/variante-logo.png" alt="logo da manual do tempo"></a>
+                <p>© 2025 Manual do Tempo. Todos os direitos reservados</p>
+            </section>
+            <nav>
+                <ul>
+                    <li><a href="#">Termos de Uso</a></li>
+                    <li><a href="#">Políticas de Privacidade</a></li>
+                </ul>
+            </nav>
+        </div>
     </footer>
 </body>
 
