Inicialização de construção e estilização da landing page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manual do Tempo - Preparando você para eventos climáticos</title>
 
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/landingpage.css">
 </head>
 
 <body>
@@ -27,25 +29,44 @@
 
     <main>
         <section class="hero">
-            <div class="hero-banner">
-                <img src="./assets/images/" alt="">
-                <img src="./assets/images/" alt="">
-                <img src="./assets/images/" alt="">
-            </div>
             <div class="hero-titulo">
-                <h1>Landing Page</h1>
+                <h1>Frase típica de landing page</h1>
                 <p>Breve descrição ou algo do tipo</p>
             </div>
+            <div class="hero-banner">
+                <img src="./assets/images/modelo.png" alt="imagem de ">
+            </div>
         </section>
-        <section>
-            resto do conteúdo
+        <section class="secao1">
+            <div class="descricao">
+                <h2>Destaque de uma funcionalidade</h2>
+                <p>Breve descrição ou algo do tipo</p>
+                <ul>
+                    <li>
+                        <img src="./assets/images/modelo.png" alt="ilustração de ">
+                        <p>Tópico apresentado</p>
+                    </li>
+                    <li>
+                        <img src="./assets/images/modelo.png" alt="ilustração de ">
+                        <p>Tópico apresentado</p>
+                    </li>
+                    <li>
+                        <img src="./assets/images/modelo.png" alt="ilustração de ">
+                        <p>Tópico apresentado</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="figura">
+                <img src="./assets/images/modelo.png" alt="imagem de ">
+            </div>
         </section>
     </main>
 
     <footer>
         <div class="limite-container">
             <section>
-                <a href="./index.html"><img class="logo" src="./assets/images/variante-logo.png" alt="logo da manual do tempo"></a>
+                <a href="./index.html"><img class="logo" src="./assets/images/variante-logo.png"
+                        alt="logo da manual do tempo"></a>
                 <p>© 2025 Manual do Tempo. Todos os direitos reservados</p>
             </section>
             <nav>
