Animações do header versão mobile e ajustes de responsividade da landing page

--- a/pages/quemsomos.html
+++ b/pages/quemsomos.html
@@ -8,13 +8,14 @@
 
     <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/styles.css">
+    <script src="../assets/js/scripts.js" defer></script>
 </head>
 
 <body>
     <header>
         <div class="limite-container">
             <a href="./home.html"><img class="logo" src="../assets/images/logo.png" alt="logo da manual do tempo"></a>
-            <img class="fechar-navegador" src="../assets/images/icone-barras.png" alt="ícone de fechar">
+            <img class="abrir-menu" src="../assets/images/icone-barras.png" alt="ícone de três barras">
             <nav class="navegador-paginas">
                 <ul>
                     <li><a href="./home.html">Início</a></li>
@@ -26,6 +27,18 @@
                 </ul>
             </nav>
         </div>
+        
+        <nav class="navegador-mobile">
+            <ul>
+                <li><a href="./home.html">Início</a></li>
+                <li><a href="./modelo.html">Extra1</a></li>
+                <li><a href="../index.html">Extra2</a></li>
+                <li><a href="./quemsomos.html">Quem Somos</a></li>
+                <li><a href="./faq.html">Dúvidas</a></li>
+                <li><a href="./contato.html">Contato</a></li>
+                <li><a href="./contato.html">Perfil</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -40,8 +53,9 @@
 
     <footer>
         <div class="limite-container">
-           <section>
-                <a href="./home.html"><img class="logo" src="../assets/images/variante-logo.png" alt="logo da manual do tempo"></a>
+            <section>
+                <a href="./home.html"><img class="logo" src="../assets/images/variante-logo.png"
+                        alt="logo da manual do tempo"></a>
                 <p>© 2025 Manual do Tempo. Todos os direitos reservados</p>
             </section>
             <nav>
