Finalização parcial do header e inicialização da estilização de quemsomos.html

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -42,7 +42,7 @@
     </header>
 
     <main id="contato">
-        <section class="title">
+        <section class="titulo">
             <h1>Contato</h1>
             <p>Breve descrição ou algo do tipo</p>
         </section>
