--- a/pages/quemsomos.html
+++ b/pages/quemsomos.html
@@ -8,6 +8,7 @@
 
     <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/quemsomos.css">
     <script src="../assets/js/scripts.js" defer></script>
 </head>
 
