Continuação da estrutura e estilização de quemsomos.html. Ajustes de responsividade e script do header

--- a/pages/quemsomos.html
+++ b/pages/quemsomos.html
@@ -28,7 +28,7 @@
                 </ul>
             </nav>
         </div>
-        
+
         <nav class="navegador-mobile">
             <ul>
                 <li><a href="./home.html">Início</a></li>
@@ -42,13 +42,81 @@
         </nav>
     </header>
 
-    <main>
+    <main id="quemsomos">
         <section class="titulo">
             <h1>Quem Somos</h1>
             <p>Breve descrição ou algo do tipo</p>
         </section>
         <section>
-            resto do conteúdo
+            <div class="resumo">
+                <p>Manual do Tempo é uma plataforma digital composta por um site e um chatbot de prevenção para ajudar a
+                    população a se proteger durante eventos climáticos extremos: ondas de calor, frio intenso, chuvas
+                    fortes e ventos perigosos.</p>
+                <img src="../assets/images/modelo.png" alt="imagem de apresentação">
+            </div>
+            <p> A proposta nasce da necessidade real de orientar a população com antecedência, agilidade e simplicidade,
+                especialmente grupos vulneráveis.</p>
+        </section>
+        <section class="valores-container">
+            <p>Nosso diferencial é unir acessibilidade + simplicidade + prevenção real em uma solução escalável e
+                socialmente relevante.</p>
+            <div class="valores">
+                <ul>
+                    <li>
+                        <img src="../assets/images/modelo.png" alt="icone de ">
+                        <p>Valor 1</p>
+                    </li>
+                    <li>
+                        <img src="../assets/images/modelo.png" alt="icone de ">
+                        <p>Valor 2</p>
+                    </li>
+                    <li>
+                        <img src="../assets/images/modelo.png" alt="icone de ">
+                        <p>Valor 3</p>
+                    </li>
+                </ul>
+                <img src="../assets/images/modelo.png" alt="imagem de ">
+            </div>
+        </section>
+        <section class="integrantes">
+            <h2>Conheça nosso time</h2>
+            <p>Breve descrição ou algo do tipo. 1TDSPF</p>
+            <ul>
+                <li>
+                    <img src="../assets/images/integrante1.jpeg" alt="imagem do integrante Felipe Ferrete Soares Lemes">
+                    <div>
+                        <p>Felipe Ferrete Soares Lemes</p>
+                        <span> - RM562999</span>
+                        <nav class="sociais">
+                            <a href="https://github.com/FelipeFerrete" target="_blank"></a>
+                            <a href="https://www.linkedin.com/in/felipe-ferrete-ab63a318a/" target="_blank"></a>
+                        </nav>
+                    </div>
+                </li>
+                <li>
+                    <img src="../assets/images/integrante2.jpg" alt="imagem do integrante Gustavo Bosak Santos">
+                    <div>
+                        <p>Gustavo Bosak Santos</p>
+                        <span> - RM566315</span>
+                        <nav class="sociais">
+                            <a href="https://github.com/Gustavo-Bosak" target="_blank"></a>
+                            <a href="https://www.linkedin.com/in/gustavo-bosak-santos/" target="_blank"></a>
+                        </nav>
+                    </div>
+                </li>
+                <li>
+                    <img src="../assets/images/integrante3.jpeg"
+                        alt="imagem do integrante Nikolas Henrique de Souza Lemes Brisola">
+                    <div>
+                        <p>Nikolas Henrique de Souza Lemes Brisola</p>
+                        <span> - RM564371</span>
+                        <nav class="sociais">
+                            <a href="https://github.com/NikolasBrisola" target="_blank"></a>
+                            <a href="https://www.linkedin.com/in/nikolas-brisola-ab3588353/" target="_blank"></a>
+                        </nav>
+                    </div>
+                </li>
+            </ul>
         </section>
     </main>
 
