Finalização parcial da página faq.html e script de expandir pergunta e resposta

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -8,6 +8,7 @@
 
     <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/faq.css">
     <script src="../assets/js/scripts.js" defer></script>
 </head>
 
@@ -27,7 +28,7 @@
                 </ul>
             </nav>
         </div>
-        
+
         <nav class="navegador-mobile">
             <ul>
                 <li><a href="./home.html">Início</a></li>
@@ -44,11 +45,34 @@
     <main>
         <section class="titulo">
             <h1>Dúvidas Frequentes</h1>
-            <p>Breve descrição ou algo do tipo</p>
+            <p>Tem alguma pergunta? acesse aqui as mais frequentes</p>
         </section>
-        <section>
-            resto do conteúdo
-        </section>
+        <ul class="perguntas">
+            <li>
+                <p class="pergunta">Pergunta 1</p>
+                <p class="resposta">Resposta da pergunta</p>
+            </li>
+            <li>
+                <p class="pergunta">Pergunta 1</p>
+                <p class="resposta">Resposta da pergunta</p>
+            </li>
+            <li>
+                <p class="pergunta">Pergunta 1</p>
+                <p class="resposta">Resposta da pergunta</p>
+            </li>
+            <li>
+                <p class="pergunta">Pergunta 1</p>
+                <p class="resposta">Resposta da pergunta</p>
+            </li>
+            <li>
+                <p class="pergunta">Pergunta 1</p>
+                <p class="resposta">Resposta da pergunta</p>
+            </li>
+            <li>
+                <p class="pergunta">Pergunta 1</p>
+                <p class="resposta">Resposta da pergunta</p>
+            </li>
+        </ul>
     </main>
 
     <footer>
