Ajustes de responsividade, reestilização do título e alterações em contato.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </header>
 
-    <main>
+    <main id="landingpage">
         <section class="hero">
             <div class="hero-titulo">
                 <h1>Frase típica de landing page</h1>
