--- a/pages/faq.html
+++ b/pages/faq.html
@@ -20,11 +20,10 @@
             <nav class="navegador-paginas">
                 <ul>
                     <li><a href="./home.html">Início</a></li>
-                    <li><a href="./modelo.html">Extra1</a></li>
-                    <li><a href="../index.html">Extra2</a></li>
                     <li><a href="./quemsomos.html">Quem Somos</a></li>
                     <li><a href="./faq.html">Dúvidas</a></li>
                     <li><a href="./contato.html">Contato</a></li>
+                    <li><a href="../index.html">Perfil</a></li>
                 </ul>
             </nav>
         </div>
@@ -32,12 +31,10 @@
         <nav class="navegador-mobile">
             <ul>
                 <li><a href="./home.html">Início</a></li>
-                <li><a href="./modelo.html">Extra1</a></li>
-                <li><a href="../index.html">Extra2</a></li>
                 <li><a href="./quemsomos.html">Quem Somos</a></li>
                 <li><a href="./faq.html">Dúvidas</a></li>
                 <li><a href="./contato.html">Contato</a></li>
-                <li><a href="./contato.html">Perfil</a></li>
+                <li><a href="../index.html">Perfil</a></li>
             </ul>
         </nav>
     </header>
@@ -49,7 +46,7 @@
         </section>
         <section class="secao1">
             <aside>
-                <img src="../assets/images/modelo.png" alt="ícone de perguntas e respostas">
+                <img src="../assets/images/icone-mensagem.png" alt="ícone de perguntas e respostas">
                 <h2>Algo mais específico? Fale com a gente!</h2>
                 <a class="botao" href="./contato.html">Contato</a>
             </aside>
@@ -57,42 +54,42 @@
                 <li>
                     <div class="pergunta">
                         <p>Pergunta 1</p>
-                        <img src="../assets/images/icone-fechar.png" alt="icone de seta">
+                        <img src="../assets/images/icone-seta.png" alt="icone de seta">
                     </div>
                     <p class="resposta">Resposta da pergunta</p>
                 </li>
                 <li>
                     <div class="pergunta">
                         <p>Pergunta 1</p>
-                        <img src="../assets/images/icone-fechar.png" alt="icone de seta">
+                        <img src="../assets/images/icone-seta.png" alt="icone de seta">
                     </div>
                     <p class="resposta">Resposta da pergunta</p>
                 </li>
                 <li>
                     <div class="pergunta">
                         <p>Pergunta 1</p>
-                        <img src="../assets/images/icone-fechar.png" alt="icone de seta">
+                        <img src="../assets/images/icone-seta.png" alt="icone de seta">
                     </div>
                     <p class="resposta">Resposta da pergunta</p>
                 </li>
                 <li>
                     <div class="pergunta">
                         <p>Pergunta 1</p>
-                        <img src="../assets/images/icone-fechar.png" alt="icone de seta">
+                        <img src="../assets/images/icone-seta.png" alt="icone de seta">
                     </div>
                     <p class="resposta">Resposta da pergunta</p>
                 </li>
                 <li>
                     <div class="pergunta">
                         <p>Pergunta 1</p>
-                        <img src="../assets/images/icone-fechar.png" alt="icone de seta">
+                        <img src="../assets/images/icone-seta.png" alt="icone de seta">
                     </div>
                     <p class="resposta">Resposta da pergunta</p>
                 </li>
                 <li>
                     <div class="pergunta">
                         <p>Pergunta 1</p>
-                        <img src="../assets/images/icone-fechar.png" alt="icone de seta">
+                        <img src="../assets/images/icone-seta.png" alt="icone de seta">
                     </div>
                     <p class="resposta">Resposta da pergunta</p>
                 </li>
