--- a/pages/quemsomos.html
+++ b/pages/quemsomos.html
@@ -20,11 +20,10 @@
             <nav class="navegador-paginas">
                 <ul>
                     <li><a href="./home.html">Início</a></li>
-                    <li><a href="./modelo.html">Extra1</a></li>
-                    <li><a href="../index.html">Extra2</a></li>
                     <li><a href="./quemsomos.html">Quem Somos</a></li>
                     <li><a href="./faq.html">Dúvidas</a></li>
                     <li><a href="./contato.html">Contato</a></li>
+                    <li><a href="../index.html">Perfil</a></li>
                 </ul>
             </nav>
         </div>
@@ -32,12 +31,10 @@
         <nav class="navegador-mobile">
             <ul>
                 <li><a href="./home.html">Início</a></li>
-                <li><a href="./modelo.html">Extra1</a></li>
-                <li><a href="../index.html">Extra2</a></li>
                 <li><a href="./quemsomos.html">Quem Somos</a></li>
                 <li><a href="./faq.html">Dúvidas</a></li>
                 <li><a href="./contato.html">Contato</a></li>
-                <li><a href="./contato.html">Perfil</a></li>
+                <li><a href="../index.html">Perfil</a></li>
             </ul>
         </nav>
     </header>
