Construção da estrutura e estilização de home.html

--- a/pages/home.html
+++ b/pages/home.html
@@ -8,6 +8,7 @@
 
     <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/home.css">
     <script src="../assets/js/scripts.js" defer></script>
 </head>
 
@@ -43,14 +44,49 @@
             <h1>Página Inicial</h1>
             <p>Breve descrição ou algo do tipo</p>
         </section>
+        <section class="clima-section">
+            <ul class="display-clima">
+                <h2>Clima de hoje em <span class="valor-localizacao">localização</span></h2>
+                <li class="temperatura">
+                    <img src="../assets/images/modelo.png" alt="icone do clima atual">
+                    <p><span class="valor-temperatura">18</span> °C</p>
+                </li>
+                <li class="vento">
+                    <p>Vento:</p>
+                    <p><span class="valor-vento">5</span> km/h</p>
+                </li>
+                <li class="umidade">
+                    <p>Umidade:</p>
+                    <p><span class="valor-umidade">80</span>%</p>
+                </li>
+            </ul>
+        </section>
         <section>
-            resto do conteúdo
+            <h2>Acesse as dicas de como se preparar</h2>
+            <ul class="lista-dicas">
+                <li>
+                    <p>Ondas de calor</p>
+                    <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
+                </li>
+                <li>
+                    <p>Frio extremo</p>
+                    <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
+                </li>
+                <li>
+                    <p>Chuvas intensas</p>
+                    <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
+                </li>
+                <li>
+                    <p>Ventos fortes</p>
+                    <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
+                </li>
+            </ul>
         </section>
     </main>
 
     <footer>
         <div class="limite-container">
-           <section>
+            <section>
                 <a href="./home.html"><img class="logo" src="../assets/images/variante-logo.png" alt="logo da manual do tempo"></a>
                 <p>© 2025 Manual do Tempo. Todos os direitos reservados</p>
             </section>
